--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Todo list app built with React",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p --env production",
     "watch": "webpack-dev-server --open"
   },
   "author": "Ian Trent",
